add bevy plugin and egui plugin

--- a/mofang/Cargo.toml
+++ b/mofang/Cargo.toml
@@ -5,4 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+debug = ["bevy-inspector-egui"]
+
 [dependencies]
+bevy = "0.9"
+bevy_egui = "0.17.1"
+bevy-inspector-egui = { version = "0.14.0", optional = true }
