--- a/mofang/Cargo.toml
+++ b/mofang/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "bevy_rubikscube"
 version = "0.1.0"
+authors = ["ZoOL <zhooul@gmail.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
