--- a/rubiks/Cargo.toml
+++ b/rubiks/Cargo.toml
@@ -22,6 +22,8 @@ dev = ["bevy/dynamic", "bevy-inspector-egui"]
 
 [dependencies]
 bevy = "0.9"
+bevy_mod_picking = "0.11.0"
+bevy_mod_raycast = "0.7.0"
 bevy_egui = "0.18.0"
 bevy-inspector-egui = { version = "0.15.0", optional = true }
 bevy_mod_picking = "0.11.0"
