--- a/rubiks/Cargo.toml
+++ b/rubiks/Cargo.toml
@@ -21,6 +21,9 @@ dev = ["bevy/dynamic"]
 [dependencies]
 bevy = "0.9"
 bevy_egui = "0.17.1"
+bevy_mod_picking = "0.11.0"
+bevy_mod_raycast = "0.7.0"
+bevy-inspector-egui = "0.14.0"
 nom = "7"
 rand = "0.8.5"
 
