--- a/a1-gao-shan-dui/Cargo.toml
+++ b/a1-gao-shan-dui/Cargo.toml
@@ -7,3 +7,19 @@ edition = "2021"
 
 [dependencies]
 slotmap = "1.0"
+js-sys = "0.3"
+wasm-bindgen = "0.2"
+
+[dependencies.web-sys]
+version = "0.3"
+features = [
+    "Comment",
+    "Document",
+    "DocumentFragment",
+    "DomTokenList",
+    "Element",
+    "Event",
+    "HtmlTemplateElement",
+    "Text",
+    "Window",
+]
