--- a/rubiks/Cargo.toml
+++ b/rubiks/Cargo.toml
@@ -18,11 +18,12 @@ codegen-units = 1
 members = ["crates/rubiks_solver"]
 
 [features]
-dev = ["bevy/dynamic"]
+dev = ["bevy/dynamic", "bevy-inspector-egui"]
 
 [dependencies]
 bevy = "0.9"
-bevy_egui = "0.17.1"
+bevy_egui = "0.18.0"
+bevy-inspector-egui = { version = "0.15.0", optional = true }
 bevy_mod_picking = "0.11.0"
 bevy_mod_raycast = "0.7.0"
 bevy-inspector-egui = "0.14.0"
